# enpal_task

./: .env.example  .gitignore  Justfile  README.md  airflow.Dockerfile  arch2.md  demo.ipynb  flow_diagram.md  mlops_th_assignment.ipynb  mlruns.db  pyproject.toml  train.Dockerfile
.github/workflows/: deploy.yml
airflow/dags/: train_container_dag.py
infra/: RUNBOOK.md  docker-compose.yml  kind-config.yaml  kind-setup.sh
infra/postgres-init/: 01-create-airflow-db.sh
mlruns/1/models/m-35875eec1b3440f3a5c7385c4d64bd83/artifacts/: MLmodel  input_example.json  registered_model_meta  requirements.txt
mlruns/1/models/m-3cf74768d9244887a563cb8d5fd239bc/artifacts/: MLmodel  conda.yaml  registered_model_meta  serving_input_example.json
mocked_components/: __init__.py  airflow_dag_mock.py  feature_store.py  monitoring.py
src/: mlflow_wrapper.py  train.py  train_entry.py
