[project]
name = "enpal-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow==3.10.0",
    "scikit-learn>=1.6",
    "pandas>=2.2",
    "python-dotenv>=1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nbconvert>=7.17.0",
]
